--- a/src/app/components/emprestimo/emprestimo.component.html
+++ b/src/app/components/emprestimo/emprestimo.component.html
@@ -43,13 +43,25 @@
         required
       />
     </div>
+    <mat-autocomplete
+      #associado="matAutocomplete"
+      [displayWith]="formatAssociadosInputName.bind(this)"
+    >
+      <mat-option
+        *ngFor="let associado of associados"
+        [value]="associado.Codigo"
+      >
+        {{ associado.Codigo }} - {{ associado.Nome }}
+      </mat-option>
+    </mat-autocomplete>
     <div class="item">
       <input
         id="associadoId"
-        type="number"
+        type="text"
         name="associadoId"
         formControlName="associadoId"
         placeholder="Codigo do Associado"
+        [matAutocomplete]="associado"
         required
       />
     </div>
